--- a/style/style.css
+++ b/style/style.css
@@ -95,7 +95,14 @@
      border-style: none;
      border-bottom-right-radius: 5px;
      border-top-right-radius: 5px;
-     color: white
+	 color: white;
+	 transition: all 0.2s;
+ }
+
+ div.buscar button.buscar:hover {
+	 background: #fff;
+	 color: #000;
+	 transition: all 0.2s;
  }
 
  div.buscar button.buscar:hover {
@@ -107,7 +114,7 @@
  div.container {
 	 background: rgba(56, 55, 55, 0.822);
 	 width: 95%;
-	 max-height: 600px;
+	 min-height: 600px;
 	 display: grid;
 	 grid-template-columns: auto 75%;
  }
@@ -180,22 +187,41 @@
 	 text-indent: 25px;
  }
 
- div.centro div.imagens {
-	 width: 100%;
-	 display: grid;
-	 grid-template-columns: repeat(3, 1fr);
-	 column-gap: 15px;
-	 row-gap: 20px;
-	 margin-bottom: 35px;
- } 
-
- div.centro div.imagens img {
-	 width: 270px;
-	 height: 170px;
-	 border-radius: 5px;
-	 border: ridge;
+ 
+ @media (min-width: 901px) {
+	div.centro div.imagens {
+		width: 100%;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 15px;
+		row-gap: 20px;
+		margin-bottom: 35px;
+	}  
+	
+	div.centro div.imagens img {
+		width: 270px;
+		height: 170px;
+		border-radius: 5px;
+		border: ridge;
+ 	}
  }
 
+
+
+ @media (min-width: 601px) and (max-width: 900px) {
+	div.centro div.imagens {
+		margin: auto;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	div.centro div.imagens img {
+		width: 200px;
+		height: 100px;
+		border-radius: 5px;
+		border: ridge;
+	}
+ }
 
 
  /* RODAPÉ */
